--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
@@ -41,11 +41,167 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Iris dataset from: iris-data.csv\n",
+      "\n",
+      "--- Data Quality Report for Iris Dataset ---\n",
+      "\n",
+      "Missing Values in Iris Dataset:\n",
+      "sepal length    0\n",
+      "sepal width     0\n",
+      "petal length    0\n",
+      "petal width     0\n",
+      "class           0\n",
+      "dtype: int64\n",
+      "\n",
+      "Inconsistent Entries in 'Gender' Column (Sample):\n",
+      "'Gender' column not found. Skipping inconsistency check.\n",
+      "\n",
+      "Basic Descriptive Statistics for Iris Dataset:\n",
+      "       sepal length  sepal width  petal length  petal width\n",
+      "count    150.000000   150.000000    150.000000   150.000000\n",
+      "mean       5.843333     3.054000      3.758667     1.198667\n",
+      "std        0.828066     0.433594      1.764420     0.763161\n",
+      "min        4.300000     2.000000      1.000000     0.100000\n",
+      "25%        5.100000     2.800000      1.600000     0.300000\n",
+      "50%        5.800000     3.000000      4.350000     1.300000\n",
+      "75%        6.400000     3.300000      5.100000     1.800000\n",
+      "max        7.900000     4.400000      6.900000     2.500000\n",
+      "\n",
+      "First 5 rows of the Iris dataframe:\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/compat/_optional.py:132\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 132\u001b[0m     module \u001b[38;5;241m=\u001b[39m \u001b[43mimportlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/importlib/__init__.py:126\u001b[0m, in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m    125\u001b[0m         level \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m--> 126\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1050\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1027\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1004\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tabulate'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 75\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df_iris\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;66;03m# You can specify the file path if it's not the default \"iris.csv\"\u001b[39;00m\n\u001b[0;32m---> 75\u001b[0m     iris_df \u001b[38;5;241m=\u001b[39m \u001b[43manalyze_iris_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Uses default\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;66;03m# iris_df = analyze_iris_data(\"path/to/your/iris.csv\")\u001b[39;00m\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m iris_df \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "Cell \u001b[0;32mIn[1], line 70\u001b[0m, in \u001b[0;36manalyze_iris_data\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Print the first few rows of the dataframe\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mFirst 5 rows of the Iris dataframe:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 70\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf_iris\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_markdown\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumalign\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mleft\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstralign\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mleft\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df_iris\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:2836\u001b[0m, in \u001b[0;36mDataFrame.to_markdown\u001b[0;34m(self, buf, mode, index, storage_options, **kwargs)\u001b[0m\n\u001b[1;32m   2834\u001b[0m kwargs\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtablefmt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpipe\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   2835\u001b[0m kwargs\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshowindex\u001b[39m\u001b[38;5;124m\"\u001b[39m, index)\n\u001b[0;32m-> 2836\u001b[0m tabulate \u001b[38;5;241m=\u001b[39m \u001b[43mimport_optional_dependency\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtabulate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2837\u001b[0m result \u001b[38;5;241m=\u001b[39m tabulate\u001b[38;5;241m.\u001b[39mtabulate(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2838\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m buf \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/compat/_optional.py:135\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[1;32m    134\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 135\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m    136\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \u001b[38;5;66;03m# Handle submodules: if we have submodule, grab parent module from sys.modules\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate."
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def analyze_iris_data(file_path=\"iris-data.csv\"):\n",
+    "    \"\"\"\n",
+    "    Analyzes the Iris dataset for missing values, identifies\n",
+    "    inconsistent 'Gender' entries (in a sample dataset), and\n",
+    "    generates a basic data quality report.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str, optional): Path to the Iris dataset CSV file.\n",
+    "            Defaults to \"iris.csv\". If the file is not found, it will\n",
+    "            attempt to use a placeholder DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: Returns the original Iris dataframe. Prints a data quality report\n",
+    "        to the console. Returns None on error.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Task 1: Load the Iris dataset using Pandas\n",
+    "        df_iris = pd.read_csv(file_path)\n",
+    "        print(f\"Loaded Iris dataset from: {file_path}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File not found at {file_path}. Using placeholder data.\")\n",
+    "        # Create placeholder Iris data.  Important to have some data for demonstration.\n",
+    "        df_iris = pd.DataFrame({\n",
+    "            'SepalLengthCm': [5.1, 4.9, 7.0, 6.4, 5.7],\n",
+    "            'SepalWidthCm': [3.5, 3.0, 3.2, 3.2, 3.8],\n",
+    "            'PetalLengthCm': [1.4, 1.4, 4.7, 4.5, 1.7],\n",
+    "            'PetalWidthCm': [0.2, 0.2, 1.4, 1.5, 0.4],\n",
+    "            'Species': ['Iris-setosa', 'Iris-setosa', 'Iris-versicolor', 'Iris-versicolor', 'Iris-setosa'],\n",
+    "            'Gender': ['Male', 'Female', 'M', 'F', 'Male'],  # Added for Task 2\n",
+    "            'Age': [20, 21, 22, 23, 24],\n",
+    "            'Score': [80, 90, 75, 85, 92],\n",
+    "        })\n",
+    "\n",
+    "    # Check if the dataframe is empty\n",
+    "    if df_iris.empty:\n",
+    "        print(\"Error: The Iris DataFrame is empty.  Please check the data source.\")\n",
+    "        return None\n",
+    "\n",
+    "    # --- Data Quality Analysis for Iris Dataset ---\n",
+    "    print(\"\\n--- Data Quality Report for Iris Dataset ---\")\n",
+    "\n",
+    "    # Task 1: Check for missing values in the entire Iris dataset.\n",
+    "    print(\"\\nMissing Values in Iris Dataset:\")\n",
+    "    print(df_iris.isnull().sum())\n",
+    "\n",
+    "    # Task 2: Identify Inconsistent Entries\n",
+    "    print(\"\\nInconsistent Entries in 'Gender' Column (Sample):\")\n",
+    "    inconsistent_gender_entries = ['M', 'Male', 'male', 'F', 'Female', 'female']\n",
+    "    if 'Gender' in df_iris.columns:  # Check if 'Gender' column exists\n",
+    "        unique_gender_values = df_iris['Gender'].unique()\n",
+    "        inconsistent_entries = [entry for entry in unique_gender_values if entry in inconsistent_gender_entries] # corrected logic\n",
+    "        if inconsistent_entries:\n",
+    "            print(f\"Inconsistent entries found: {inconsistent_entries}\")\n",
+    "        else:\n",
+    "            print(\"No inconsistent gender entries found.\")\n",
+    "    else:\n",
+    "        print(\"'Gender' column not found. Skipping inconsistency check.\")\n",
+    "\n",
+    "    # Task 3: Generate basic descriptive statistics for the Iris dataset.\n",
+    "    print(\"\\nBasic Descriptive Statistics for Iris Dataset:\")\n",
+    "    #  Only describe numeric columns\n",
+    "    numeric_df_iris = df_iris.select_dtypes(include=np.number)\n",
+    "    print(numeric_df_iris.describe())\n",
+    "\n",
+    "    # Print the first few rows of the dataframe\n",
+    "    print(\"\\nFirst 5 rows of the Iris dataframe:\")\n",
+    "    print(df_iris.head().to_markdown(index=False, numalign=\"left\", stralign=\"left\"))\n",
+    "    return df_iris\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # You can specify the file path if it's not the default \"iris.csv\"\n",
+    "    iris_df = analyze_iris_data() # Uses default\n",
+    "    # iris_df = analyze_iris_data(\"path/to/your/iris.csv\")\n",
+    "    if iris_df is not None:\n",
+    "        print(\"\\nAnalysis Complete.\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
