--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_4.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_4.ipynb
@@ -38,11 +38,158 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: File not found at customer_data.csv. Using placeholder data.\n",
+      "\n",
+      "--- Data Quality Report for Customer Dataset ---\n",
+      "\n",
+      "Missing Values in 'Email' and 'Phone' columns:\n",
+      "Email    0\n",
+      "Phone    1\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicate Emails:\n",
+      "alice.smith@example.com\n",
+      "alice.smith@example.com\n",
+      "\n",
+      "Data Quality Summary:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6 entries, 0 to 5\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   CustomerID  6 non-null      int64 \n",
+      " 1   Name        6 non-null      object\n",
+      " 2   Email       6 non-null      object\n",
+      " 3   Phone       5 non-null      object\n",
+      " 4   Address     6 non-null      object\n",
+      " 5   Age         6 non-null      int64 \n",
+      " 6   Gender      6 non-null      object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 464.0+ bytes\n",
+      "None\n",
+      "\n",
+      "Descriptive Statistics for numerical columns:\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'np'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 72\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;66;03m# You can specify the file path if it's not the default \"customer_data.csv\"\u001b[39;00m\n\u001b[0;32m---> 72\u001b[0m     customer_df \u001b[38;5;241m=\u001b[39m \u001b[43manalyze_customer_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Uses default\u001b[39;00m\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;66;03m# customer_df = analyze_customer_data(\"path/to/your/customer_data.csv\")\u001b[39;00m\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m customer_df \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "Cell \u001b[0;32mIn[1], line 62\u001b[0m, in \u001b[0;36manalyze_customer_data\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;66;03m# Print descriptive statistics for numerical columns\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mDescriptive Statistics for numerical columns:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 62\u001b[0m numeric_df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mselect_dtypes(include\u001b[38;5;241m=\u001b[39m\u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mnumber)\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28mprint\u001b[39m(numeric_df\u001b[38;5;241m.\u001b[39mdescribe())\n\u001b[1;32m     65\u001b[0m \u001b[38;5;66;03m# Print the first few rows of the dataframe\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'np'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def analyze_customer_data(file_path=\"customer_data.csv\"):\n",
+    "    \"\"\"\n",
+    "    Analyzes customer data from a CSV file, checks for missing values in\n",
+    "    'Email' and 'Phone', identifies duplicate emails, and generates a\n",
+    "    data quality report.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str, optional): Path to the customer data CSV file.\n",
+    "            Defaults to \"customer_data.csv\". If the file is not found,\n",
+    "            it will use placeholder data.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: Returns the original customer dataframe.\n",
+    "            Prints a data quality report to the console. Returns None on error.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Task 1: Load the dataset using Pandas\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(f\"Loaded customer data from: {file_path}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File not found at {file_path}. Using placeholder data.\")\n",
+    "        # Create placeholder customer data.\n",
+    "        df = pd.DataFrame({\n",
+    "            'CustomerID': [1, 2, 3, 4, 5, 6],\n",
+    "            'Name': ['Alice Smith', 'Bob Johnson', 'Charlie Brown', 'Diana Miller', 'Ethan Davis', 'Alice Smith'],\n",
+    "            'Email': ['alice.smith@example.com', 'bob.johnson@example.com', 'charlie.brown@example.com',\n",
+    "                      'diana.miller@example.com', 'ethan.davis@example.com', 'alice.smith@example.com'],\n",
+    "            'Phone': ['123-456-7890', '987-654-3210', '555-123-4567', None, '111-222-3333', '123-456-7890'],\n",
+    "            'Address': ['123 Main St', '456 Oak Ave', '789 Pine Ln', '101 Elm St', '202 Cedar Rd', '123 Main St'],\n",
+    "            'Age': [25, 30, 22, 35, 28, 25],\n",
+    "            'Gender': ['Female', 'Male', 'Male', 'Female', 'Male', 'Female']\n",
+    "        })\n",
+    "\n",
+    "    # Check if the DataFrame is empty\n",
+    "    if df.empty:\n",
+    "        print(\"Error: The DataFrame is empty.  Please check the data source.\")\n",
+    "        return None\n",
+    "\n",
+    "    # --- Data Quality Analysis for Customer Dataset ---\n",
+    "    print(\"\\n--- Data Quality Report for Customer Dataset ---\")\n",
+    "\n",
+    "    # Task 1: Find missing values in specific columns\n",
+    "    print(\"\\nMissing Values in 'Email' and 'Phone' columns:\")\n",
+    "    print(df[['Email', 'Phone']].isnull().sum())\n",
+    "\n",
+    "    # Task 2: Identify duplicate emails\n",
+    "    print(\"\\nDuplicate Emails:\")\n",
+    "    duplicate_emails = df[df['Email'].duplicated(keep=False)]['Email'] # Corrected line\n",
+    "    if duplicate_emails.empty:\n",
+    "        print(\"No duplicate emails found.\")\n",
+    "    else:\n",
+    "        print(duplicate_emails.to_string(index=False))\n",
+    "\n",
+    "    # Task 3: Generate a data quality summary\n",
+    "    print(\"\\nData Quality Summary:\")\n",
+    "    print(df.info())  # Get an overview of the data\n",
+    "\n",
+    "    # Print descriptive statistics for numerical columns\n",
+    "    print(\"\\nDescriptive Statistics for numerical columns:\")\n",
+    "    numeric_df = df.select_dtypes(include=pd.np.number)\n",
+    "    print(numeric_df.describe())\n",
+    "\n",
+    "    # Print the first few rows of the dataframe\n",
+    "    print(\"\\nFirst 5 rows of the customer dataframe:\")\n",
+    "    print(df.head().to_markdown(index=False, numalign=\"left\", stralign=\"left\"))\n",
+    "    return df\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # You can specify the file path if it's not the default \"customer_data.csv\"\n",
+    "    customer_df = analyze_customer_data() # Uses default\n",
+    "    # customer_df = analyze_customer_data(\"path/to/your/customer_data.csv\")\n",
+    "    if customer_df is not None:\n",
+    "        print(\"\\nAnalysis Complete.\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
