--- a/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
+++ b/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
@@ -54,11 +54,189 @@
     "# Description: Normalize a numeric column to a range using min-max scaling.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "  Category  Value  Amount   Age  Score\n",
+      "0        A   10.0   100.0  25.0   0.80\n",
+      "1        B   20.0   200.0  30.0   0.90\n",
+      "2        A    NaN   150.0   NaN   0.75\n",
+      "3        C   40.0   300.0  40.0   0.95\n",
+      "4        B   25.0   220.0  35.0   0.85\n",
+      "5        A   15.0   180.0  28.0   0.70\n",
+      "6     None   30.0     NaN  45.0   1.00\n",
+      "7        C   45.0   350.0  32.5   0.65\n",
+      "\n",
+      "--- Question 1: Handling Missing Values with Conditional Filling ---\n",
+      "\n",
+      "DataFrame after conditional filling of 'Value':\n",
+      "  Category  Value  Amount   Age  Score  Value_Filled\n",
+      "0        A   10.0   100.0  25.0   0.80          10.0\n",
+      "1        B   20.0   200.0  30.0   0.90          20.0\n",
+      "2        A    NaN   150.0   NaN   0.75          12.5\n",
+      "3        C   40.0   300.0  40.0   0.95          40.0\n",
+      "4        B   25.0   220.0  35.0   0.85          25.0\n",
+      "5        A   15.0   180.0  28.0   0.70          15.0\n",
+      "6     None   30.0     NaN  45.0   1.00          30.0\n",
+      "7        C   45.0   350.0  32.5   0.65          45.0\n",
+      "\n",
+      "--- Question 2: Removing Outliers by Rescaling ---\n",
+      "\n",
+      "DataFrame after removing 'Amount' outliers (based on z-score <= 3):\n",
+      "  Category  Value  Amount   Age  Score  Value_Filled  Amount_ZScore\n",
+      "0        A   10.0   100.0  25.0   0.80          10.0       1.328972\n",
+      "1        B   20.0   200.0  30.0   0.90          20.0       0.166122\n",
+      "2        A    NaN   150.0   NaN   0.75          12.5       0.747547\n",
+      "3        C   40.0   300.0  40.0   0.95          40.0       0.996729\n",
+      "4        B   25.0   220.0  35.0   0.85          25.0       0.066449\n",
+      "5        A   15.0   180.0  28.0   0.70          15.0       0.398692\n",
+      "7        C   45.0   350.0  32.5   0.65          45.0       1.578154\n",
+      "\n",
+      "--- Question 3: Applying Data Type Conversion ---\n",
+      "\n",
+      "DataFrame after filling missing 'Age' and converting to integer:\n",
+      "    Age  Age_Filled\n",
+      "0  25.0          25\n",
+      "1  30.0          30\n",
+      "2   NaN          31\n",
+      "3  40.0          40\n",
+      "4  35.0          35\n",
+      "5  28.0          28\n",
+      "7  32.5          32\n",
+      "\n",
+      "--- Question 4: Automating Data Cleaning with Functions ---\n",
+      "\n",
+      "DataFrame after automated cleaning:\n",
+      "  category      value      amount        age  score  value_filled  \\\n",
+      "0        A  10.000000  100.000000  25.000000   0.80          10.0   \n",
+      "1        B  20.000000  200.000000  30.000000   0.90          20.0   \n",
+      "2        A  26.428571  150.000000  33.642857   0.75          12.5   \n",
+      "3        C  40.000000  300.000000  40.000000   0.95          40.0   \n",
+      "4        B  25.000000  220.000000  35.000000   0.85          25.0   \n",
+      "5        A  15.000000  180.000000  28.000000   0.70          15.0   \n",
+      "6        A  30.000000  214.285714  45.000000   1.00          30.0   \n",
+      "7        C  45.000000  350.000000  32.500000   0.65          45.0   \n",
+      "\n",
+      "   amount_zscore  \n",
+      "0       1.328972  \n",
+      "1       0.166122  \n",
+      "2       0.747547  \n",
+      "3       0.996729  \n",
+      "4       0.066449  \n",
+      "5       0.398692  \n",
+      "6       0.754666  \n",
+      "7       1.578154  \n",
+      "\n",
+      "--- Question 5: Complex Data Normalization ---\n",
+      "\n",
+      "DataFrame with 'Score' column normalized using Min-Max scaling:\n",
+      "   Score  Score_Normalized\n",
+      "0   0.80          0.500000\n",
+      "1   0.90          0.833333\n",
+      "2   0.75          0.333333\n",
+      "3   0.95          1.000000\n",
+      "4   0.85          0.666667\n",
+      "5   0.70          0.166667\n",
+      "7   0.65          0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "\n",
+    "# Sample DataFrame for demonstration\n",
+    "data = {\n",
+    "    'Category': ['A', 'B', 'A', 'C', 'B', 'A', None, 'C'],\n",
+    "    'Value': [10, 20, np.nan, 40, 25, 15, 30, 45],\n",
+    "    'Amount': [100, 200, 150, 300, 220, 180, np.nan, 350],\n",
+    "    'Age': [25, 30, np.nan, 40, 35, 28, 45, 32.5],\n",
+    "    'Score': [0.8, 0.9, 0.75, 0.95, 0.85, 0.7, 1.0, 0.65]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
+    "\n",
+    "print(\"\\n--- Question 1: Handling Missing Values with Conditional Filling ---\")\n",
+    "# Fill missing 'Value' based on 'Category'\n",
+    "df['Value_Filled'] = df['Value'].fillna(df.groupby('Category')['Value'].transform('mean'))\n",
+    "print(\"\\nDataFrame after conditional filling of 'Value':\")\n",
+    "print(df)\n",
+    "\n",
+    "print(\"\\n--- Question 2: Removing Outliers by Rescaling ---\")\n",
+    "# Remove outliers from 'Amount' using z-scores\n",
+    "df['Amount_ZScore'] = np.abs((df['Amount'] - df['Amount'].mean()) / df['Amount'].std())\n",
+    "df_no_outliers = df[df['Amount_ZScore'] <= 3].copy() # Keeping values within 3 standard deviations\n",
+    "print(\"\\nDataFrame after removing 'Amount' outliers (based on z-score <= 3):\")\n",
+    "print(df_no_outliers)\n",
+    "\n",
+    "print(\"\\n--- Question 3: Applying Data Type Conversion ---\")\n",
+    "# Fill missing 'Age' with the mean and convert to integer\n",
+    "df_no_outliers['Age_Filled'] = df_no_outliers['Age'].fillna(df_no_outliers['Age'].mean()).astype(int)\n",
+    "print(\"\\nDataFrame after filling missing 'Age' and converting to integer:\")\n",
+    "print(df_no_outliers[['Age', 'Age_Filled']])\n",
+    "\n",
+    "print(\"\\n--- Question 4: Automating Data Cleaning with Functions ---\")\n",
+    "def clean_data(df):\n",
+    "    \"\"\"\n",
+    "    Automates filling missing values, removing duplicates, and standardizing column names.\n",
+    "    \"\"\"\n",
+    "    df_cleaned = df.copy()\n",
+    "\n",
+    "    # Fill missing values (example: fill all numerical with mean, categorical with mode)\n",
+    "    for col in df_cleaned.select_dtypes(include=np.number).columns:\n",
+    "        df_cleaned[col] = df_cleaned[col].fillna(df_cleaned[col].mean())\n",
+    "    for col in df_cleaned.select_dtypes(include='object').columns:\n",
+    "        df_cleaned[col] = df_cleaned[col].fillna(df_cleaned[col].mode()[0] if not df_cleaned[col].mode().empty else None)\n",
+    "\n",
+    "    # Remove duplicates\n",
+    "    df_cleaned = df_cleaned.drop_duplicates()\n",
+    "\n",
+    "    # Standardize column names (lowercase and replace spaces with underscores)\n",
+    "    df_cleaned.columns = df_cleaned.columns.str.lower().str.replace(' ', '_')\n",
+    "\n",
+    "    return df_cleaned\n",
+    "\n",
+    "df_cleaned_automated = clean_data(df)\n",
+    "print(\"\\nDataFrame after automated cleaning:\")\n",
+    "print(df_cleaned_automated)\n",
+    "\n",
+    "print(\"\\n--- Question 5: Complex Data Normalization ---\")\n",
+    "# Normalize 'Score' column using Min-Max scaling\n",
+    "scaler = MinMaxScaler()\n",
+    "df_no_outliers['Score_Normalized'] = scaler.fit_transform(df_no_outliers[['Score']])\n",
+    "print(\"\\nDataFrame with 'Score' column normalized using Min-Max scaling:\")\n",
+    "print(df_no_outliers[['Score', 'Score_Normalized']])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
