--- a/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_2.ipynb
+++ b/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_2.ipynb
@@ -54,11 +54,356 @@
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Part 1: Handle Missing Values & Duplicates ---\n",
+      "\n",
+      "1. Load the Data:\n",
+      "Original DataFrame with Missing Values and Duplicates:\n",
+      "    ID     Name   Age      City\n",
+      "0  1.0    Alice  25.0  New York\n",
+      "1  2.0      Bob  30.0    London\n",
+      "2  3.0      NaN  28.0     Paris\n",
+      "3  4.0  Charlie   NaN    London\n",
+      "4  5.0    David  35.0     Tokyo\n",
+      "5  2.0      Bob  30.0    London\n",
+      "6  6.0      Eve  22.0     Paris\n",
+      "7  NaN    Alice  25.0       NaN\n",
+      "\n",
+      "2. Handling Missing Values:\n",
+      "\n",
+      "   1. Identify Missing Values:\n",
+      "Missing values count per column:\n",
+      "ID      1\n",
+      "Name    1\n",
+      "Age     1\n",
+      "City    1\n",
+      "dtype: int64\n",
+      "\n",
+      "DataFrame with boolean mask for missing values:\n",
+      "      ID   Name    Age   City\n",
+      "0  False  False  False  False\n",
+      "1  False  False  False  False\n",
+      "2  False   True  False  False\n",
+      "3  False  False   True  False\n",
+      "4  False  False  False  False\n",
+      "5  False  False  False  False\n",
+      "6  False  False  False  False\n",
+      "7   True  False  False   True\n",
+      "\n",
+      "   2. Fill Missing Values:\n",
+      "\n",
+      "DataFrame after filling missing values:\n",
+      "    ID     Name        Age      City\n",
+      "0  1.0    Alice  25.000000  New York\n",
+      "1  2.0      Bob  30.000000    London\n",
+      "2  3.0  Unknown  28.000000     Paris\n",
+      "3  4.0  Charlie  27.857143    London\n",
+      "4  5.0    David  35.000000     Tokyo\n",
+      "5  2.0      Bob  30.000000    London\n",
+      "6  6.0      Eve  22.000000     Paris\n",
+      "7 -1.0    Alice  25.000000    London\n",
+      "\n",
+      "3. Handling Duplicates:\n",
+      "\n",
+      "   1. Identify Duplicates:\n",
+      "Boolean Series indicating duplicate rows:\n",
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "5     True\n",
+      "6    False\n",
+      "7    False\n",
+      "dtype: bool\n",
+      "\n",
+      "Number of duplicate rows: 1\n",
+      "\n",
+      "Duplicate rows:\n",
+      "    ID Name   Age    City\n",
+      "5  2.0  Bob  30.0  London\n",
+      "\n",
+      "   2. Remove Duplicates:\n",
+      "\n",
+      "DataFrame after removing duplicate rows:\n",
+      "    ID     Name        Age      City\n",
+      "0  1.0    Alice  25.000000  New York\n",
+      "1  2.0      Bob  30.000000    London\n",
+      "2  3.0  Unknown  28.000000     Paris\n",
+      "3  4.0  Charlie  27.857143    London\n",
+      "4  5.0    David  35.000000     Tokyo\n",
+      "6  6.0      Eve  22.000000     Paris\n",
+      "7 -1.0    Alice  25.000000    London\n",
+      "\n",
+      "4. Combined Practice on a New Dataset:\n",
+      "\n",
+      "   1. New Sample Data:\n",
+      "New DataFrame with Missing Values and Potential Duplicates:\n",
+      "     Item  Quantity  Price\n",
+      "0   Apple      10.0    1.0\n",
+      "1     NaN       5.0    2.5\n",
+      "2  Banana       NaN    0.8\n",
+      "3  Orange       8.0    1.2\n",
+      "4   Apple      10.0    1.0\n",
+      "5   Grape      12.0    1.5\n",
+      "6  Banana       5.0    0.8\n",
+      "7     NaN       7.0    NaN\n",
+      "\n",
+      "   2. Handling Missing Values:\n",
+      "\n",
+      "New DataFrame after filling missing values:\n",
+      "      Item  Quantity     Price\n",
+      "0    Apple      10.0  1.000000\n",
+      "1  Unknown       5.0  2.500000\n",
+      "2   Banana       8.0  0.800000\n",
+      "3   Orange       8.0  1.200000\n",
+      "4    Apple      10.0  1.000000\n",
+      "5    Grape      12.0  1.500000\n",
+      "6   Banana       5.0  0.800000\n",
+      "7  Unknown       7.0  1.257143\n",
+      "\n",
+      "   3. Remove Duplicates:\n",
+      "\n",
+      "New DataFrame after removing duplicate rows:\n",
+      "      Item  Quantity     Price\n",
+      "0    Apple      10.0  1.000000\n",
+      "1  Unknown       5.0  2.500000\n",
+      "2   Banana       8.0  0.800000\n",
+      "3   Orange       8.0  1.200000\n",
+      "5    Grape      12.0  1.500000\n",
+      "6   Banana       5.0  0.800000\n",
+      "7  Unknown       7.0  1.257143\n",
+      "\n",
+      "\n",
+      "--- Part 2: Apply Standardization & Formatting Rules ---\n",
+      "\n",
+      "1. Standardize Text Data:\n",
+      "\n",
+      "   1. Convert All Names to Lowercase:\n",
+      "Original Names DataFrame:\n",
+      "            Name\n",
+      "0    Alice Smith\n",
+      "1    BOB JOHNSON\n",
+      "2  charlie Brown\n",
+      "3      David Lee\n",
+      "\n",
+      "Names DataFrame with lowercase names:\n",
+      "            Name     Name_Lower\n",
+      "0    Alice Smith    alice smith\n",
+      "1    BOB JOHNSON    bob johnson\n",
+      "2  charlie Brown  charlie brown\n",
+      "3      David Lee      david lee\n",
+      "\n",
+      "2. Format Numerical Data:\n",
+      "\n",
+      "   1. Round Age Column to the Nearest Integer:\n",
+      "Original Ages DataFrame:\n",
+      "      Name   Age\n",
+      "0    Alice  25.3\n",
+      "1      Bob  30.8\n",
+      "2  Charlie  28.1\n",
+      "\n",
+      "Ages DataFrame with rounded ages (as integers):\n",
+      "      Name   Age  Age_Rounded\n",
+      "0    Alice  25.3           25\n",
+      "1      Bob  30.8           31\n",
+      "2  Charlie  28.1           28\n",
+      "\n",
+      "3. Combined Practice on Another Dataset:\n",
+      "\n",
+      "   1. New Sample Data:\n",
+      "Original Products DataFrame:\n",
+      "          Product    Price\n",
+      "0      Laptop Pro  1200.50\n",
+      "1     Smart Watch   250.75\n",
+      "2      LAPTOP pro  1200.50\n",
+      "3  Wireless Mouse    30.00\n",
+      "4     smart watch   250.75\n",
+      "\n",
+      "   2. Standardize Product Names:\n",
+      "\n",
+      "Products DataFrame with standardized product names:\n",
+      "          Product    Price Product_Standardized\n",
+      "0      Laptop Pro  1200.50           laptop pro\n",
+      "1     Smart Watch   250.75          smart watch\n",
+      "2      LAPTOP pro  1200.50           laptop pro\n",
+      "3  Wireless Mouse    30.00       wireless mouse\n",
+      "4     smart watch   250.75          smart watch\n",
+      "\n",
+      "   3. Format Prices to Two Decimal Places:\n",
+      "\n",
+      "Products DataFrame with prices formatted to two decimal places (as strings):\n",
+      "          Product    Price Product_Standardized Price_Formatted\n",
+      "0      Laptop Pro  1200.50           laptop pro         1200.50\n",
+      "1     Smart Watch   250.75          smart watch          250.75\n",
+      "2      LAPTOP pro  1200.50           laptop pro         1200.50\n",
+      "3  Wireless Mouse    30.00       wireless mouse           30.00\n",
+      "4     smart watch   250.75          smart watch          250.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Part 1: Handle Missing Values & Duplicates ---\n",
+    "\n",
+    "print(\"\\n--- Part 1: Handle Missing Values & Duplicates ---\")\n",
+    "\n",
+    "# 1. Load the Data:\n",
+    "print(\"\\n1. Load the Data:\")\n",
+    "data_mv_dup = {'ID': [1, 2, 3, 4, 5, 2, 6, np.nan],\n",
+    "               'Name': ['Alice', 'Bob', np.nan, 'Charlie', 'David', 'Bob', 'Eve', 'Alice'],\n",
+    "               'Age': [25, 30, 28, np.nan, 35, 30, 22, 25],\n",
+    "               'City': ['New York', 'London', 'Paris', 'London', 'Tokyo', 'London', 'Paris', np.nan]}\n",
+    "df_mv_dup = pd.DataFrame(data_mv_dup)\n",
+    "print(\"Original DataFrame with Missing Values and Duplicates:\")\n",
+    "print(df_mv_dup)\n",
+    "\n",
+    "# 2. Handling Missing Values\n",
+    "print(\"\\n2. Handling Missing Values:\")\n",
+    "#     1. Identify Missing Values:\n",
+    "print(\"\\n   1. Identify Missing Values:\")\n",
+    "print(\"Missing values count per column:\")\n",
+    "print(df_mv_dup.isnull().sum())\n",
+    "print(\"\\nDataFrame with boolean mask for missing values:\")\n",
+    "print(df_mv_dup.isnull())\n",
+    "\n",
+    "#     2. Fill Missing Values:\n",
+    "print(\"\\n   2. Fill Missing Values:\")\n",
+    "# Filling 'Name' with 'Unknown'\n",
+    "df_mv_dup['Name'].fillna('Unknown', inplace=True)\n",
+    "# Filling 'Age' with the mean\n",
+    "df_mv_dup['Age'].fillna(df_mv_dup['Age'].mean(), inplace=True)\n",
+    "# Filling 'City' with the mode\n",
+    "df_mv_dup['City'].fillna(df_mv_dup['City'].mode()[0], inplace=True)\n",
+    "# Filling 'ID' with a placeholder value (be cautious with ID filling)\n",
+    "df_mv_dup['ID'].fillna(-1, inplace=True)\n",
+    "\n",
+    "print(\"\\nDataFrame after filling missing values:\")\n",
+    "print(df_mv_dup)\n",
+    "\n",
+    "# 3. Handling Duplicates\n",
+    "print(\"\\n3. Handling Duplicates:\")\n",
+    "#     1. Identify Duplicates:\n",
+    "print(\"\\n   1. Identify Duplicates:\")\n",
+    "duplicates = df_mv_dup.duplicated()\n",
+    "print(\"Boolean Series indicating duplicate rows:\")\n",
+    "print(duplicates)\n",
+    "print(\"\\nNumber of duplicate rows:\", duplicates.sum())\n",
+    "print(\"\\nDuplicate rows:\")\n",
+    "print(df_mv_dup[duplicates])\n",
+    "\n",
+    "#     2. Remove Duplicates:\n",
+    "print(\"\\n   2. Remove Duplicates:\")\n",
+    "df_no_duplicates = df_mv_dup.drop_duplicates()\n",
+    "print(\"\\nDataFrame after removing duplicate rows:\")\n",
+    "print(df_no_duplicates)\n",
+    "\n",
+    "# 4. Combined Practice on a New Dataset\n",
+    "print(\"\\n4. Combined Practice on a New Dataset:\")\n",
+    "#     1. New Sample Data:\n",
+    "print(\"\\n   1. New Sample Data:\")\n",
+    "new_data = {'Item': ['Apple', np.nan, 'Banana', 'Orange', 'Apple', 'Grape', 'Banana', np.nan],\n",
+    "            'Quantity': [10, 5, np.nan, 8, 10, 12, 5, 7],\n",
+    "            'Price': [1.0, 2.5, 0.8, 1.2, 1.0, 1.5, 0.8, np.nan]}\n",
+    "new_df = pd.DataFrame(new_data)\n",
+    "print(\"New DataFrame with Missing Values and Potential Duplicates:\")\n",
+    "print(new_df)\n",
+    "\n",
+    "#     2. Handling Missing Values:\n",
+    "print(\"\\n   2. Handling Missing Values:\")\n",
+    "new_df['Item'].fillna('Unknown', inplace=True)\n",
+    "new_df['Quantity'].fillna(new_df['Quantity'].median(), inplace=True)\n",
+    "new_df['Price'].fillna(new_df['Price'].mean(), inplace=True)\n",
+    "print(\"\\nNew DataFrame after filling missing values:\")\n",
+    "print(new_df)\n",
+    "\n",
+    "#     3. Remove Duplicates:\n",
+    "print(\"\\n   3. Remove Duplicates:\")\n",
+    "new_df_no_duplicates = new_df.drop_duplicates()\n",
+    "print(\"\\nNew DataFrame after removing duplicate rows:\")\n",
+    "print(new_df_no_duplicates)\n",
+    "\n",
+    "# --- Part 2: Apply Standardization & Formatting Rules ---\n",
+    "\n",
+    "print(\"\\n\\n--- Part 2: Apply Standardization & Formatting Rules ---\")\n",
+    "\n",
+    "# 1. Standardize Text Data\n",
+    "print(\"\\n1. Standardize Text Data:\")\n",
+    "#     1. Convert All Names to Lowercase:\n",
+    "print(\"\\n   1. Convert All Names to Lowercase:\")\n",
+    "data_names = {'Name': ['Alice Smith', 'BOB JOHNSON', 'charlie Brown', 'David Lee']}\n",
+    "df_names = pd.DataFrame(data_names)\n",
+    "print(\"Original Names DataFrame:\")\n",
+    "print(df_names)\n",
+    "df_names['Name_Lower'] = df_names['Name'].str.lower()\n",
+    "print(\"\\nNames DataFrame with lowercase names:\")\n",
+    "print(df_names)\n",
+    "\n",
+    "# 2. Format Numerical Data\n",
+    "print(\"\\n2. Format Numerical Data:\")\n",
+    "#     1. Round Age Column to the Nearest Integer:\n",
+    "print(\"\\n   1. Round Age Column to the Nearest Integer:\")\n",
+    "data_ages = {'Name': ['Alice', 'Bob', 'Charlie'], 'Age': [25.3, 30.8, 28.1]}\n",
+    "df_ages = pd.DataFrame(data_ages)\n",
+    "print(\"Original Ages DataFrame:\")\n",
+    "print(df_ages)\n",
+    "df_ages['Age_Rounded'] = df_ages['Age'].round().astype(int)\n",
+    "print(\"\\nAges DataFrame with rounded ages (as integers):\")\n",
+    "print(df_ages)\n",
+    "\n",
+    "# 3. Combined Practice on Another Dataset\n",
+    "print(\"\\n3. Combined Practice on Another Dataset:\")\n",
+    "#     1. New Sample Data:\n",
+    "print(\"\\n   1. New Sample Data:\")\n",
+    "product_data = {'Product': ['Laptop Pro', 'Smart Watch', 'LAPTOP pro', 'Wireless Mouse', 'smart watch'],\n",
+    "                'Price': [1200.50, 250.75, 1200.50, 30.00, 250.75]}\n",
+    "df_products = pd.DataFrame(product_data)\n",
+    "print(\"Original Products DataFrame:\")\n",
+    "print(df_products)\n",
+    "\n",
+    "#     2. Standardize Product Names:\n",
+    "print(\"\\n   2. Standardize Product Names:\")\n",
+    "df_products['Product_Standardized'] = df_products['Product'].str.lower().str.strip()\n",
+    "print(\"\\nProducts DataFrame with standardized product names:\")\n",
+    "print(df_products)\n",
+    "\n",
+    "#     3. Format Prices to Two Decimal Places:\n",
+    "print(\"\\n   3. Format Prices to Two Decimal Places:\")\n",
+    "df_products['Price_Formatted'] = df_products['Price'].map('{:.2f}'.format)\n",
+    "print(\"\\nProducts DataFrame with prices formatted to two decimal places (as strings):\")\n",
+    "print(df_products)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
