--- a/src/Module 5/Hands-on - Data Cleaning with Pandas/Ques_1.ipynb
+++ b/src/Module 5/Hands-on - Data Cleaning with Pandas/Ques_1.ipynb
@@ -24,11 +24,127 @@
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data:\n",
+      "       Name   Age Gender   Income\n",
+      "0    Alice  25.0      F  50000.0\n",
+      "1      Bob   NaN      M  54000.0\n",
+      "2  Charlie  30.0    NaN  58000.0\n",
+      "3    David  22.0      M      NaN\n",
+      "4      Eva   NaN      F  62000.0\n",
+      "5    Frank  29.0    NaN  61000.0\n",
+      "\n",
+      "Missing Values Per Column:\n",
+      " Name      0\n",
+      "Age       2\n",
+      "Gender    2\n",
+      "Income    1\n",
+      "dtype: int64\n",
+      "\n",
+      "Total Missing Values:\n",
+      " 5\n",
+      "\n",
+      "Rows with Any Missing Data:\n",
+      "       Name   Age Gender   Income\n",
+      "1      Bob   NaN      M  54000.0\n",
+      "2  Charlie  30.0    NaN  58000.0\n",
+      "3    David  22.0      M      NaN\n",
+      "4      Eva   NaN      F  62000.0\n",
+      "5    Frank  29.0    NaN  61000.0\n",
+      "\n",
+      "After Dropping Rows with Missing Values:\n",
+      "     Name   Age Gender   Income\n",
+      "0  Alice  25.0      F  50000.0\n",
+      "\n",
+      "After Imputation:\n",
+      "       Name   Age Gender   Income\n",
+      "0    Alice  25.0      F  50000.0\n",
+      "1      Bob  26.5      M  54000.0\n",
+      "2  Charlie  30.0      F  58000.0\n",
+      "3    David  22.0      M  58000.0\n",
+      "4      Eva  26.5      F  62000.0\n",
+      "5    Frank  29.0      F  61000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Task 1: Detect Missing Data\n",
+    "# -----------------------------\n",
+    "\n",
+    "# 1. Load the Data\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eva', 'Frank'],\n",
+    "    'Age': [25, np.nan, 30, 22, np.nan, 29],\n",
+    "    'Gender': ['F', 'M', np.nan, 'M', 'F', np.nan],\n",
+    "    'Income': [50000, 54000, 58000, np.nan, 62000, 61000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"Original Data:\\n\", df)\n",
+    "\n",
+    "# 2. Detect Missing Data\n",
+    "print(\"\\nMissing Values Per Column:\\n\", df.isnull().sum())\n",
+    "print(\"\\nTotal Missing Values:\\n\", df.isnull().sum().sum())\n",
+    "print(\"\\nRows with Any Missing Data:\\n\", df[df.isnull().any(axis=1)])\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Task 2: Handle Missing Data by Dropping\n",
+    "# -----------------------------\n",
+    "\n",
+    "# 1. Drop Rows with Missing Values\n",
+    "df_dropped = df.dropna()\n",
+    "print(\"\\nAfter Dropping Rows with Missing Values:\\n\", df_dropped)\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Task 3: Handle Missing Data by Imputation\n",
+    "# -----------------------------\n",
+    "\n",
+    "# 1. Fill Missing Values\n",
+    "df_imputed = df.copy()\n",
+    "\n",
+    "# Fill Age with Mean\n",
+    "df_imputed['Age'].fillna(df_imputed['Age'].mean(), inplace=True)\n",
+    "\n",
+    "# Fill Gender with Mode\n",
+    "df_imputed['Gender'].fillna(df_imputed['Gender'].mode()[0], inplace=True)\n",
+    "\n",
+    "# Fill Income with Median\n",
+    "df_imputed['Income'].fillna(df_imputed['Income'].median(), inplace=True)\n",
+    "\n",
+    "print(\"\\nAfter Imputation:\\n\", df_imputed)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
